--- a/frontend/src/assets/styles/blocks/contacts.scss
+++ b/frontend/src/assets/styles/blocks/contacts.scss
@@ -68,7 +68,7 @@
 
   &__phrase {
     text-align: center;
-    font-family: LilyScriptOne;
+    font-family: 'Lily Script One';
     font-size: 50px;
     font-weight: 500;
     letter-spacing: 2px;
