--- a/frontend/src/assets/styles/blocks/welcome.scss
+++ b/frontend/src/assets/styles/blocks/welcome.scss
@@ -46,7 +46,7 @@
 
   &__title {
     padding-top: 200px;
-    font-family: LilyScriptOne;
+    font-family: 'Lily Script One';
     font-size: 120px;
     text-shadow: 2px 2px 4px #534949;
     margin-bottom: 50px;
