--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,5 +1,4 @@
 @import './assets/styles/utils/reset.scss';
-@import './assets/styles/utils/typography.scss';
 @import './assets/styles/utils/variables.scss';
 @import './assets/styles/utils/support.scss';
 
@@ -19,7 +18,7 @@ html {
 }
 
 body {
-  font-family: 'Gotham Pro', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   background-color: $col-background;
 }
