--- a/frontend/src/pages/BookingPage/BookingPage.scss
+++ b/frontend/src/pages/BookingPage/BookingPage.scss
@@ -348,7 +348,7 @@
     }
     font-weight: 400;
     font-size:30px;
-    font-family: LilyScriptOne;
+    font-family: 'Lily Script One';
     text-align: center;
   }
 }
