--- a/frontend/src/pages/NotFoundPage/NotFoundPage.scss
+++ b/frontend/src/pages/NotFoundPage/NotFoundPage.scss
@@ -6,7 +6,7 @@
   &__text {
     font-weight: 400;
     font-size:30px;
-    font-family: LilyScriptOne;
+    font-family: 'Lily Script One';
     text-align: center;
     margin-bottom: 100px;
   }
