--- a/frontend/src/pages/BookingPage/BookingPage.scss
+++ b/frontend/src/pages/BookingPage/BookingPage.scss
@@ -2,15 +2,18 @@
 
 .booking {
   padding-top: 100px;
+  display: grid;
+  grid-template-columns: 7fr 3fr;
+  column-gap: 30px;
+  overflow: initial;
 
-  &__form {
-    display: grid;
-    grid-template-columns: 7fr 3fr;
-    column-gap: 30px;
+  @media (max-width: 820px) {
+    display: block;
+  }
 
-    @media (max-width: 820px) {
-      display: block;
-    }
+  &__sticky {
+    position: sticky;
+    top: 115px;
   }
 
   &__right-column {
@@ -70,14 +73,14 @@
 
   &__price-switcher {
     display: flex;
-    width: 170px;
+    width: 240px;
     align-items: center;
     justify-content: space-between;
     margin: 0 0 20px auto;
     font-size: 18px;
     font-weight: 500;
     
-    label {
+    p {
       cursor: pointer;
     }
   }
@@ -325,10 +328,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 24px;
+    font-weight: 500;
   }
 
   &__accepted-message {
-    margin: 60px 0;
+    margin: 120px 0 60px;
 
     h3 {
       span {
