--- a/frontend/src/assets/styles/blocks/benefits.scss
+++ b/frontend/src/assets/styles/blocks/benefits.scss
@@ -30,6 +30,8 @@
   &__img-container {
     width: 100%;
     height: 300px;
+    border-radius: 5px;
+    overflow: hidden;
 
     @media (max-width: 640px) {
       position: absolute;
