--- a/frontend/src/assets/styles/blocks/contacts.scss
+++ b/frontend/src/assets/styles/blocks/contacts.scss
@@ -20,6 +20,8 @@
     background-image: url('../../images/map.PNG');
     background-position: center;
     background-size: cover;
+    border-radius: 5px;
+    overflow: hidden;
 
     @media (max-width: 820px) {
       width: 100%;
