--- a/frontend/src/assets/styles/blocks/masters.scss
+++ b/frontend/src/assets/styles/blocks/masters.scss
@@ -25,6 +25,8 @@
   &__img-container {
     margin-bottom: 30px;
     height: 400px;
+    border-radius: 5px;
+    overflow: hidden;
     
     @media (max-width: 720px) {
       height: 400px;
