--- a/frontend/src/assets/styles/blocks/services.scss
+++ b/frontend/src/assets/styles/blocks/services.scss
@@ -31,6 +31,8 @@
     position: relative;
     transition: $trans-duration;
     margin-bottom: 20px;
+    border-radius: 5px;
+    overflow: hidden;
 
     &--hair::before,
     &--nails::before,
