--- a/frontend/src/pages/BookingPage/BookingPage.scss
+++ b/frontend/src/pages/BookingPage/BookingPage.scss
@@ -118,6 +118,8 @@
     cursor: pointer;
     transition: $trans-duration;
     border: 2px solid rgba(255, 255, 255, 0);
+    border-radius: 5px;
+    overflow: hidden;
 
     &:hover {
       filter: brightness(1.1);
